--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.5",
     "react-router-dom": "^6.22.0",
     "swiper": "^11.0.6"
